Bug 524737. ifdef nsHTMLMediaElement.h to fix compilation with --disable-ogg + --disable-wav, p=bartml@wp.pl,r=roc